# simple_calculating_ai-agent

./: .env  main.py  pyproject.toml
